# Echo-Guard

./: .echoguard.yml  .echoguardignore  .gitignore  BENCHMARKS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md  action.yml  echo-guard.yml  pyproject.toml
.claude/commands/: coderabbit.md
.claude/skills/: coderabbit-triage.md
.github/workflows/: ci.yml  echo-guard-ci.yml  echo-guard.yml  publish.yml  release.yml  tag-release.yml
benchmarks/: SETUP.md  __init__.py  base.py  bigclonebench.py  codesage_base_results.json  codesage_small_results.json  gptclonebench.py  ground_truth.py  poj104.py  report.py  results.json  runner.py  setup_datasets.sh  validate.py
docs/: ARCHITECTURE.md  BENCHMARKS.md  CHANGELOG.md  FEEDBACK_SCHEMA.md  FINE-TUNING.md  ROADMAP.md  SEMANTIC-DETECTION-RESEARCH.md  TYPE4-ANALYSIS.md  architecture.excalidraw
echo_guard/: __init__.py  ast_distance.py  classifier.py  cli.py  config.py  daemon.py  depgraph.py  embeddings.py  feedback.py  health.py  index.py  languages.py  mcp_server.py  output.py  parser.py  repo_detect.py  scanner.py  similarity.py  upload.py  utils.py  watcher.py
echo_guard/data/: classifier_weights.json
echo_guard/skills/: echo-guard-refactor.md  echo-guard-review.md  echo-guard-search.md  echo-guard.md
examples/: auth_utils.go  github-action.yml  utils_api.py  utils_api.ts  utils_auth.js  utils_auth.py
scripts/: README.md  train_classifier.py
tests/: test_benchmarks.py  test_compile.py  test_depgraph.py  test_feedback_consent_pr.py  test_languages.py  test_new_features.py  test_repo_detect.py  test_similarity.py  test_upload.py  test_v040_phase1.py  test_validation.py
vscode-extension/: .vscodeignore  README.md  package-lock.json  package.json
vscode-extension/src/: apiMappings.ts  codeActions.ts  daemon.ts  diagnostics.ts  extension.ts  findingsTree.ts  reviewPanel.ts  setup.ts  statusBar.ts
