[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "echo-guard"
version = "0.4.1"
description = "Semantic linting CLI that detects codebase redundancy created by AI coding agents"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "Jeremy Wizenfeld", email = "81655880+jwizenfeld04@users.noreply.github.com" }
]
keywords = [
    "cli", "linting", "code-quality", "duplicates", "redundancy",
    "ai", "tree-sitter", "semantic-analysis", "mcp",
]
dependencies = [
    "typer>=0.9.0",
    "rich>=13.0.0",
    "duckdb>=0.9.0",
    "numpy>=1.24.0",
    "tree-sitter>=0.22.0",
    "pyyaml>=6.0",
    "watchdog>=3.0.0",
    "questionary>=2.0.0",
    "onnxruntime>=1.16.0",
    "transformers>=4.30.0",
    "optimum[onnxruntime]>=1.14.0",
]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Environment :: Console",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.urls]
Homepage = "https://github.com/jwizenfeld04/Echo-Guard"
Repository = "https://github.com/jwizenfeld04/Echo-Guard"
Issues = "https://github.com/jwizenfeld04/Echo-Guard/issues"
Changelog = "https://github.com/jwizenfeld04/Echo-Guard/blob/main/docs/CHANGELOG.md"

[project.optional-dependencies]
languages = [
    "tree-sitter-python>=0.21.0",
    "tree-sitter-javascript>=0.21.0",
    "tree-sitter-typescript>=0.21.0",
    "tree-sitter-go>=0.21.0",
    "tree-sitter-rust>=0.21.0",
    "tree-sitter-java>=0.21.0",
    "tree-sitter-ruby>=0.21.0",
    "tree-sitter-c>=0.21.0",
    "tree-sitter-cpp>=0.21.0",
]
mcp = ["mcp[cli]>=1.0.0"]
scale = [
    "usearch>=2.9",
]
dev = [
    "pytest>=7.0.0",
    "pre-commit>=3.0.0",
    "bump-my-version>=0.20.0",
    "tqdm>=4.60.0",
]

[project.scripts]
echo-guard = "echo_guard.cli:app"

[tool.bumpversion]
current_version = "0.4.1"
commit = true
tag = true
tag_name = "v{new_version}"
commit_message = "release: v{new_version}"

[[tool.bumpversion.files]]
filename = "pyproject.toml"
search = 'version = "{current_version}"'
replace = 'version = "{new_version}"'

[[tool.bumpversion.files]]
filename = "echo_guard/__init__.py"
search = '__version__ = "{current_version}"'
replace = '__version__ = "{new_version}"'


[[tool.bumpversion.files]]
filename = "README.md"
search = 'uses: jwizenfeld04/Echo-Guard@v{current_version}'
replace = 'uses: jwizenfeld04/Echo-Guard@v{new_version}'

[tool.pytest.ini_options]
addopts = "--ignore=tests/test_benchmarks.py"
markers = ["benchmark: heavyweight benchmark tests (require model + datasets)"]

[tool.hatch.build.targets.wheel]
packages = ["echo_guard"]